--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styles": "^5.14.16",
     "@mui/x-date-pickers": "^6.18.0",
     "@react-google-maps/api": "^2.19.2",
+    "@types/node": "^20.9.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
